Fix white space on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -140,6 +140,7 @@ button {
 
 header h1 {
   color: white;
+  padding: 1rem
 }
 
 main {
@@ -183,6 +184,7 @@ main {
   justify-content: center;
   align-items: center;
   gap: 1vh;
+  width: 100%
   
 
 }
@@ -593,7 +595,7 @@ textarea {
     padding: 0;
     margin-block-start: 0;
     padding-inline-start: 0;
-    width: 50rem;
+    
   }
 
   li {
@@ -601,7 +603,7 @@ textarea {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 50rem;
+    
   }
 
   main {
@@ -667,6 +669,7 @@ textarea {
     grid-column-start: 1;
     grid-column-end: 3;   
     justify-content: left;
+    
   }
   .dice {
     margin-right: 1rem;
